Update to openapi-generator 7.10
Also update other dependencies, small code improvements